Changelog
=========

4.8.1 (unreleased)
------------------

- Nothing changed yet.


4.8.0 (2018-06-22)
------------------

- Update to CKEditor 4.9.2
  Include not enabled balloontoolbar plugin
  [gotcha]


4.7.2 (2017-12-15)
------------------

- Make `uploadimage` `resolveuid` links relative.
  [gotcha]


4.7.1 (2017-12-08)
------------------

- `uploadimage` support uses `resolveuid`.
  [gotcha]


4.7.0 (2017-12-01)
------------------

- Enable `uploadwidget` and `uploadimage` plugins.
  Corresponding upgrade step
  (Now depends on `plone.api`)
  [gotcha]


4.6.0 (2017-08-18)
------------------

- Update to CKEditor 4.7.2
  [gotcha]


4.5.0 (2017-02-24)
------------------

- Add a setting for CKEditor skin: colored or flat buttons

  Default skin remains Moonocolor, colored buttons.
  Flat buttons comes from the new Moono-lisa skin (see http://ckeditor.com/addon/moono-lisa)
  [gotcha]

  To avoid ugly border-bottom on buttons in default Plone 4 skin: add the
  following style to your CSS::

      #content a.cke_button {
          border-bottom: 0;
      }

      #content a.cke_button:hover {
          border-bottom: #ccc 0.1em solid;
      }

- Update to CKEditor 4.6.2
  [gotcha]


4.4.5 (2016-11-23)
------------------

- ``nonbreaking`` plugin: used to insert non breaking spaces and hyphens.
  [gotcha]


4.4.4 (2016-05-02)
------------------

- Fix overloading settings: it should be empty dict rather than None
  [gotcha]


4.4.3 (2016-05-02)
------------------

- Enable settings overloading for formlib wysiwyg widget
  [gotcha]


4.4.2 (2016-04-13)
------------------

- Fix customization per widget of filexxxBrowserUrl, depending on language
  [gotcha]


4.4.1 (2016-04-13)
------------------

- Enable settings overloading for plone.app.z3cform wysiwyg widget
  [gotcha]

- Enable customization per widget of filexxxBrowserUrl, depending on language
  [gotcha]

4.4.0 (2016-03-11)
------------------

- Store custom toolbars in registry.